Dockerfile needs to run as root
ibmcom/mq:latest has been updated to set user as mqm. The startup script needs the user set as root, else the startApp won't start.

--- a/DockerFiles/Dockerfile
+++ b/DockerFiles/Dockerfile
@@ -13,6 +13,7 @@
 # limitations under the License.
 
 FROM ibmcom/mq:latest
+USER root
 COPY GenerateEvents.jar /data/GenerateEvents.jar
 COPY startApp.sh /data/startApp.sh
 COPY 20-config.mqsc /etc/mqm/
