--- a/MQTicketService/TicketGenerator/mqConfig.json
+++ b/MQTicketService/TicketGenerator/mqConfig.json
@@ -1,7 +1,7 @@
 {
     "HOST":"localhost",
     "PORT":"1414",
-    "CHANNEL":"SYSTEM.DEF.SVRCONN",
+    "CHANNEL":"DEV.APP.SVRCONN",
     "QMGR":"QM1",
     "APP_USER":"app",
     "APP_PASSWORD":"passw0rd",
